[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Weapon/Weapon.tscn" type="PackedScene" id=2]
[ext_resource path="res://Weapon/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/Player/Player.gd" type="Script" id=4]
[ext_resource path="res://actors/Health.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 64 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="body" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="body"]
scale = Vector2( 1, 2 )
texture = ExtResource( 1 )

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="VariableJumpBuffer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AttackCoolDown" type="Timer" parent="."]
wait_time = 0.129
one_shot = true

[node name="Weapon" parent="." instance=ExtResource( 2 )]
Bullet = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Health" parent="." instance=ExtResource( 5 )]
